# DynaMune

./: .gitignore  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  alleles_mhc1.txt  alleles_mhc2.txt  anm_comparison.py  app.py  banner.sh  contact_timeline.py  deformation_analysis.py  domain_hinge_analysis.py  env.yml  install.sh  mhc1.py  mhc1_prediction.csv  mhc2.py  mhc2_prediction.csv  model.py  paper.bib  paper.md  pocket_dynamics.py  prody_contact_stability.py  prody_nma.py  prs_analysis.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh  setup.py  test.fasta  verify_install.py
dynamune/: __init__.py  web.py
dynamune.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dynamune/cli/: __init__.py  anm_comparison.py  contact_stability.py  contact_timeline.py  deformation.py  domain_hinge.py  help.py  nma.py  pocket_dynamics.py  prs.py
results/20251110_190043_7697a549/: bcell.seq  bcell_algpred.csv  bcell_toxinpred.csv  mhc1.seq  mhc1_algpred.csv  mhc1_toxinpred.csv  mhc2.seq  mhc2_algpred.csv  mhc2_toxinpred.csv  sequence.txt  vaccine_construct.fasta
results/20251110_190043_7697a549/predicted_structure_NMA_PCA_results/: ANM_model.anm.npz  ANM_modes.nmd  anm_pca_overlap.txt  cluster_assignments.txt  cross_correlation.txt  eigenvalues.txt  square_fluctuations.txt
results/20251110_190043_7697a549/uploaded_structure_NMA_PCA_results/: ANM_model.anm.npz  ANM_modes.nmd  anm_pca_overlap.txt  cluster_assignments.txt  cross_correlation.txt  eigenvalues.txt  square_fluctuations.txt
static/css/: style.css
static/js/: construct.js  main.js  results.js
templates/: anm_comparison.html  construct.html  contact_stability.html  contact_timeline.html  deformability.html  domain_hinge.html  index.html  pocket_dynamics.html  prody_nma.html  prs_analysis.html  pycapsid.html  results.html  screening.html  standalone_nma.html  use_cases.html
