[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamune"
version = "1.0.0"
description = "Unified platform for protein dynamics analysis and immunoinformatics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DynaMune Development Team"},
]
keywords = [
    "protein dynamics",
    "structural biology",
    "normal mode analysis",
    "immunoinformatics",
    "vaccine design",
    "ProDy",
    "elastic network model",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "algpred2==1.4",
    "biopython==1.79",
    "Flask==3.1.2",
    "matplotlib>=3.5.0",
    "numpy>=1.23.0,<2.0.0",
    "pandas>=2.0.0",
    "ProDy==2.4.1",
    "scikit-learn==1.2.2",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "toxinpred3==1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/Amirtesh/DynaMune"
Repository = "https://github.com/Amirtesh/DynaMune"
"Bug Tracker" = "https://github.com/Amirtesh/DynaMune/issues"

[project.scripts]
dynamune-web = "dynamune.web:main"
dynamune-help = "dynamune.cli.help:main"
dynamune-nma = "dynamune.cli.nma:main"
dynamune-prs = "dynamune.cli.prs:main"
dynamune-pocket = "dynamune.cli.pocket_dynamics:main"
dynamune-deformation = "dynamune.cli.deformation:main"
dynamune-domain-hinge = "dynamune.cli.domain_hinge:main"
dynamune-anm-compare = "dynamune.cli.anm_comparison:main"
dynamune-contact-stability = "dynamune.cli.contact_stability:main"
dynamune-contact-timeline = "dynamune.cli.contact_timeline:main"

[tool.setuptools]
packages = ["dynamune", "dynamune.cli"]
include-package-data = true

[tool.setuptools.package-data]
dynamune = [
    "templates/*.html",
    "templates/**/*.html",
    "static/**/*",
    "NetBCE/**/*",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
